<resources>
    <string name="app_name">CustomUseMap</string>
    <string name="searchedit_hints">지번/도로명 주소 검색</string>
    <string name="region_string_kr">지명</string>
    <string name="road_string_kr">도로명</string>
    <string name="region_addr_string_kr">지번 주소</string>
    <string name="road_addr">도로명 주소</string>
    <!-- Strings used for fragments for navigation -->

    <string name="ReverseGeoCoderFailedText">위치정보를 찾지 못했습니다</string>
    <string name="SelectedLocationText">해당 장소 등록</string>
    <string name="currentlocation">현재 위치 등록</string>
    <string name="ImagenotSelectedYET">사진이 정해지지 않았습니다</string>
    <string name="DialogEditTextHint">타이틀 수정</string>
    <string name="LocationMiscInfoAddText">장소를 추가합니다</string>
    <string name="LocationNickName">해당 위치의 이름</string>
    <string name="inputhere">입력란</string>
    <string name="inputName">이름 정보</string>
    <string name="phonenumber">전화번호</string>
    <string name="title_activity_location_misc_info_input">LocationMiscInfoInputActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="dataemptyinserver">서버에 데이터가 없습니다</string>
    <string name="serverinsertfailed">데이터 업로드 실패</string>
    <string name="EditTextHint1">해당 장소의 이름</string>
    <string name="serverinsertsuccessfull">등록 되었습니다</string>
    <string name="EmptyEditInput">제목 입력란이 비어있습니다</string>
    <string name="Server_Inet_ADDR">http://hhk.iptime.org:50080/sqltest.php</string>
    <string name="somethingempty">빈 입력란이 있습니다</string>
    <string name="NoitemsList">데이터가 없습니다</string>
    <string name="ERRORS">예외적인 에러발생! 개발자를 부르십시오</string>
    <string name="infodetailed">세부 정보</string>
    <string name="geusija">게시자</string>
    <string name="LoadingDialogTitle">데이터 로딩중</string>
    <string name="LOGINACTIVITYTITLE">사용자 이름을 입력합니다</string>
    <string name="userloginedittexthint">게시자로 표시되는 이름</string>
    <string name="ThatwasEssantialInput">사용자 입력 거부 - 필수 입력 사항입니다</string>
    <string name="PhonenumberRetrieveError">전화번호를 알 수 없음</string>
    <string name="myuploads">나의 게시건</string>
    <string name="menutitle_listing">menutitle_listing</string>
    <string name="menutitle_searching">menutitle_searching</string>
    <string name="imageskip_yndialog_title">이미지를 제외하고 업로드합니다</string>
    <string name="simple_yn_dialog_yes">확인</string>
    <string name="simple_yn_dialog_no">취소</string>
    <string name="listactivity_alldata_showed">마지막 항목까지 표시되었습니다</string>
    <string name="FtpServerAddress">hhk.iptime.org</string>
    <string name="imageunavilable">이미지가 등록되지 않았습니다</string>
    <string name="deleteconfirm">이 항목을 삭제하시겠습니까?</string>

</resources>
