<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="4dp"
    android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_account_box_black_24dp"
            android:layout_margin="4dp"
            />

        <EditText
            android:id="@+id/edit_misc_info_name_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="@string/inputName"
            android:hint="@string/inputName"
            android:inputType="text"
            android:lines="1"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_call_black_24dp"
            android:backgroundTint="@color/colorPrimary"
            android:layout_margin="4dp"
            />

        <EditText
            android:id="@+id/edit_misc_info_phonenumber_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="@string/phonenumber"
            android:hint="@string/phonenumber"
            android:inputType="phone"
            android:lines="1"
            />

</LinearLayout>