<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserLoginActivity">


    <TextView
        android:id="@+id/loginactivitytitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginStart="24dp"
        android:text="@string/LOGINACTIVITYTITLE"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/loginactivitytitle"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <EditText
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/edit_userlogin_idinput"
            android:hint="@string/userloginedittexthint"
            android:lines="1"
            android:autofillHints=""
            android:layout_weight="1"
            />

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_done_white_24dp"
            android:backgroundTint="@color/colorPrimary"
            android:padding="16dp"
            android:contentDescription="@string/app_name"
            android:id="@+id/btn_useridinputconfirm"
            android:onClick="onBtnClickLoginActivity"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>